import React from 'react';
import { shallow } from 'enzyme';

import PlainText from './index';

jest.mock('../Title/', () => 'Title');

describe('Form component <PlainText />', () => {
  let wrapper;

  beforeEach(() => {
    wrapper = shallow(<PlainText />);
  });

  describe('rendering', () => {
    it('should render plain text correctly', () => {
      wrapper.setProps({
        meta: {
          value: 'Lorem Ipsum',
          type: 'citation',
          ifVisible: true
        }
      });

      expect(wrapper).toMatchSnapshot();
    });

    it('should render multiple parargraphs of text correctly', () => {
      wrapper.setProps({
        meta: {
          value: [
            'Lorem Ipsum',
            'jumps over',
            'DOG'
          ],
          type: 'citation',
          ifVisible: true
        }
      });

      expect(wrapper).toMatchSnapshot();
    });

    it('should render plain text with text substitution correctly', () => {
      wrapper.setProps({
        meta: {
          value: 'Diablo {incident.id}',
          type: 'citation',
          ifVisible: true
        },
        parent: {
          meta: {
            incidentContainer: {
              incident: {
                id: 666
              }
            }
          }
        }
      });

      expect(wrapper).toMatchSnapshot();
    });

    it('should render multiple parargraphs of text with substitution correctly', () => {
      wrapper.setProps({
        meta: {
          value: [
            'Lorem Ipsum',
            'hell {incident.id} YES',
            'DOG'
          ],
          type: 'citation',
          ifVisible: true
        },
        parent: {
          meta: {
            incidentContainer: {
              incident: {
                id: 666
              }
            }
          }
        }
      });

      expect(wrapper).toMatchSnapshot();
    });

    it('should render no plain text when not visible', () => {
      wrapper.setProps({
        meta: {
          ifVisible: false
        }
      });

      expect(wrapper).toMatchSnapshot();
    });
  });
});
